Web refactoring